--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="add_vacation_btn_description">Add Vacation</string>
     <string name="vacation_btn_details">details</string>
     <string name="vacation_btn_edit">edit</string>
+    <string name="add_vacation_dialog_name_hint">Desired Vacation Name</string>
+    <string name="add_vacation_dialog_hotel_hint">Hotel Name</string>
+    <string name="add_vacation_dialog_location_hint">Location</string>
+    <string name="add_vacation_dialog_necessary_money">Necessary Money</string>
+    <string name="add_vacation_dialog_description">Vacation Description</string>
+    <string name="add_vacation_dialog_create_vacation">Create Vacation</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="detailed_vacation_upload_image_button_hint">Upload Image</string>
+    <string name="detailed_vacation_edit_vacation_button_hint">Edit Vacation</string>
+    <string name="detailed_vacation_image_hint">Vacation Image</string>
 </resources>
