--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="add_vacation_dialog_necessary_money">Necessary Money</string>
     <string name="add_vacation_dialog_description">Vacation Description</string>
     <string name="add_vacation_dialog_create_vacation">Create Vacation</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="detailed_vacation_upload_image_button_hint">Upload Image</string>
     <string name="detailed_vacation_edit_vacation_button_hint">Edit Vacation</string>
@@ -21,4 +20,5 @@
     <string name="location">Location</string>
     <string name="hotel">Hotel</string>
     <string name="vacation_image">Vacation Image</string>
+    <string name="edit_vacation">edit vacation</string>
 </resources>
